<resources>
    <string name="app_name">Geofind</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_play_hunt">Play a Hunt</string>
    <string name="main_screen_create_hunt">Create a Hunt</string>
    <string name="main_screen_google_play_games">Achievements</string>
    <string name="title_activity_hunt_list">Choose a hunt</string>
    <string name="item_hunt_list_start_hunt">Start Hunt</string>
    <string name="title_activity_hunt_details">Hunt Details</string>
    <string name="hunt_details_map">Overview Map</string>
    <string name="hunt_details_map_description">Click on the map to enlarge it.</string>
    <string name="hunt_details_distances">Distances</string>
    <string name="hunt_details_total_distance">Total distance:\ </string>
    <string name="item_hunt_list_total_distance">Total Distance\ </string>
    <string name="item_hunt_list_distance_unit_km">" km"</string>
    <string name="item_hunt_list_distance_unit_miles">" miles"</string>
    <string name="hunt_details_distance_from_user">Distance from start point: </string>
    <string name="hunt_details_rating">Rating</string>
    <string name="hunt_details_comments_reviews">Comments and Reviews</string>
    <string name="item_hint_reveal">Reveal</string>
    <string name="item_hint_revealed">Revealed</string>
    <string name="item_hint_solved">Solved</string>
    <string name="item_hint_text">Hint Text</string>
    <string name="item_hint_picture">Hint Picture</string>
    <string name="item_hint_picture_details">Click on the picture to enlarge.</string>
    <string name="item_hint_video">Hint Video</string>
    <string name="item_hint_sound">Hint Sound</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="title_activity_hunt_finish">HuntFinishActivity</string>
    <string name="hunt_finish_title">Finished Hunt!</string>
    <string name="hunt_finish_description">Good job, you have finished this hunt! Feel free to
        review and share it with your friends.</string>
    <string name="hunt_finish_statistics_title">Statistics</string>
    <string name="hunt_finish_total_points">Total number of points:</string>
    <string name="hunt_finish_solved_points">Solved points:</string>
    <string name="hunt_finish_total_time">Total time:</string>
    <string name="hunt_finish_rate_and_review_title">Rate and Review</string>
    <string name="hunt_finish_review_title">Title</string>
    <string name="hunt_finish_review">Review</string>
    <string name="hunt_finish_submit_review">Submit review</string>
    <string name="action_share">Share</string>
    <string name="title_activity_hint_list">Add Points</string>
    <string name="title_activity_create_hunt">Create a Hunt</string>
    <string name="create_hunt_title">Hunt Title and Description</string>
    <string name="create_hunt_description">In this section, you are required to fill in your hunt\'s
        title and text. The title and the text are essential, as they would appear first in your
        hunt\'s preview on other users search. \nUse proper language and try not to give any clues
        on the points of the hunt in the text.</string>
    <string name="create_hunt_description_hint">Description</string>
    <string name="create_hunt_title_hint">Title</string>
    <string name="create_hunt_add_points_title">Points of your Hunt</string>
    <string name="create_hunt_add_points_description">Click on the button below to add points to
        your hunt.</string>
    <string name="action_submit">Submit hunt</string>
    <string name="hunt_create_check_before_title">Submit hunt?</string>
    <string name="hunt_create_check_before_description">Before submitting your hunt, check your
        title, text and points thoroughly, as you will not be able to edit them later!</string>
    <string name="action_add_points">Submit points</string>
    <string name="hint_list_empty">No points yet. Click on the \'add\' button to add a point.</string>
    <string name="hint_list_add_point">Add a point</string>
    <string name="create_hunt_create_points">Create Points</string>
    <string name="title_activity_create_hint">Create a Point</string>
    <string name="create_hint_title">Adding a Point</string>
    <string name="create_hint_details">In this section you are required to edit a point in your
        hunt. Each point must have a hint text and a real world coordinate. Additionally, you may
        add to your point a picture, sound or video hints. Note: The hint should not be too trivial
        for the player to solve.</string>
    <string name="create_hint_hint_text_hint">Hint text</string>
    <string name="create_hint_pick_point_title">Pick a Point</string>
    <string name="create_hint_pick_point_description">Click on the map to choose a point.</string>
    <string name="create_hint_add_hint">Add Point</string>
    <string name="create_hint_select_picture">Select a Picture</string>
    <string name="create_hint_select_picture_details">Click on the button below to add a picture.</string>
    <string name="create_hint_select_video_details">Click on the button below to add a video.</string>
    <string name="create_hint_select_audio_details">Click on the button below to add an audio.</string>
    <string name="create_hint_fields_error">One or more fields are missing or illegal!</string>
    <string name="title_activity_pick_point">Pick a Point</string>
    <string name="action_pick_point">Pick a Point</string>
    <string name="create_hint_file_manager_error">No file manager available.</string>
    <string name="create_hint_kitkat_file_error">Error loading file.</string>
    <string name="hint_list_not_enough_points_error">A hunt must have at least 2 points!</string>
    <string name="hunt_create_edit_points_button">Edit your Points</string>
    <string name="hint_list_data_loss_warning">Your changes will be lost! Do you want to save
        them?</string>
    <string name="hint_list_data_loss_warning_title">Unsaved Changes</string>
    <string name="hint_list_data_loss_warning_positive">OK</string>
    <string name="hint_list_data_loss_warning_negative">Cancel</string>
    <string name="hint_list_data_loss_warning_no_save">You have less then one point and your changes
        will be lost! You have to create at least on more point to save.</string>
    <string name="action_edit_point">Edit Point</string>
    <string name="action_discard_point">Discard Point</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="create_hint_point_missing">Please select a point on the map</string>
    <string name="GeofenceResultIntent">GeofenceEnter</string>
    <string name="PointIndexExtra">PointIndex</string>
    <string name="PointIdIntentExtra">ID</string>
    <string name="hunt_list_pager_new_hunts_title">New Hunts</string>
    <string name="hunt_list_pager_ongoing_hunts_title">Ongoing Hunts</string>
    <string name="hunt_list_pager_finished_hunts_title">Finished Hunts</string>
    <string name="hunt_activity_hint_number_title">Point #</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="preferences_distance_units_kilometers">Kilometers</string>
    <string name="preferences_distance_units_miles">Miles</string>
    <string name="hunt_create_edit_points_text">You have added %d points to your hunt.</string>
    <string name="create_hint_invalid_input">A hunt must have a title, a description and at least 2
        points!</string>
    <string name="info_card_dismiss">Got it!</string>
    <string-array name="preferences_distance_units">
        <item>@string/preferences_distance_units_kilometers</item>
        <item>@string/preferences_distance_units_miles</item>
    </string-array>
    <string name="title_activity_hunt_details_map">@string/hunt_details_map</string>
    <string name="hello_world">Hello world!</string>
    <string name="hunt_details_navigate_start_point">Navigate to Start Point</string>
    <string name="create_hint_select_audio">Select an Audio</string>
    <string name="create_hint_select_video">Select a Video</string>
    <string name="preferences_general_settings_title">General Settings</string>
    <string name="preferences_sound_effects_title">Sound Effects</string>
    <string name="preferences_sound_effects_summary">Play sound effects during the game.</string>
    <string name="preferences_device_settings_title">Device Settings</string>
    <string name="preferences_always_awake_title">Always Awake</string>
    <string name="preferences_always_awake_summary">The screen would stay awake while playing a hunt.</string>
    <string name="preferences_work_in_background_title">Work In Background</string>
    <string name="preferences_work_in_background_summary">The hunt would continue to run when it\'s
        window is closed.</string>
    <string name="preferences_play_offline_title">Play Offline</string>
    <string name="preferences_play_offline_summary">Download entire hunt\'s data before starting to
        play.</string>
    <string name="preferences_units_title">Units</string>
    <string name="preferences_distance_units_title">Distance units</string>
    <string name="preferences_account_settings_title">Account Settings</string>
    <string name="preferences_google_plus_title">Google+ Profile</string>
    <string name="preferences_account_sign_out_title">Sign Out</string>
    <string name="preferences_account_sign_in_title">Sign In</string>
    <string name="preferences_improve_geofind_title">Improve Geofind</string>
    <string name="preferences_analytics_title">Analytics</string>
    <string name="preferences_analytics_summary">Send anonymous statistic about app usage.</string>
    <string name="preferences_crash_logs_title">Crash Logs</string>
    <string name="preferences_crash_logs_summary">Send anonymous crash reports of this app.</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_open_source_licences_title">Open Source Licences</string>
    <string name="preferences_geofind_version_title">Geofind version</string>
    <string name="create_hint_remove_image">Remove selected image</string>
    <string name="create_hint_remove_video">Remove selected video</string>
    <string name="create_hint_remove_audio">Remove selected audio</string>
    <string name="action_back_to_main">Main Menu</string>
    <string name="hunt_details_waiting_for_location">Waiting for location…</string>
    <string name="pref_analytics">pref_analytics</string>
    <string name="pref_crash_logs">pref_crash_logs</string>
    <string name="title_activity_content_view">Hint Media</string>
    <string name="create_hint_play_video">Play selected video</string>
    <string name="create_hint_play_audio">Play selected audio</string>
    <string name="create_hint_max_file_error">Max file size is 10MB</string>
    <string name="title_activity_comment_list">Comments</string>
    <string name="hunt_details_no_comments">No comments yet.</string>
    <string name="hunt_details_view_comments">View Comments</string>
    <string name="hunt_finish_review_thanks">Thanks for reviewing!</string>
    <string name="location_services_disabled">Location services disabled</string>
    <string name="location_not_available">Geofind needs access to your location. Please turn on
        location access.</string>
    <string name="location_disabled_error">"To play Geofind, location must be enabled. Please turn on location access."</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_missing_canceled">Leave the game</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="item_hunt_list_pager_empty">No hunts to show.</string>
    <string name="title_activity_licence">LicenceActivity</string>
    <string name="item_hint_play_video">Play Video</string>
    <string name="item_hint_play_sound">Play Sound</string>
</resources>