<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geofind.geofind.CreateHuntActivity">

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--Linear layout to wrap into scroll view-->
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/card_view"
                android:id="@+id/hunt_title_details_info"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/create_hunt_title" />

                            <TextView
                                style="@style/hunt_details"
                                android:text="@string/create_hunt_description"
                                android:paddingBottom="@dimen/activity_vertical_margin" />

                        </LinearLayout>

                        <View style="@style/bottom_card_button_separator" />

                        <Button
                            style="@style/bottom_card_button"
                            android:onClick="dismissTitleDescriptionInfo"
                            android:text="@string/info_card_dismiss" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        style="@style/item_list_hunt_inner_layout"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical">

                        <TextView
                            style="@style/hunt_details_title"
                            android:text="@string/title_activity_hunt_details" />

                        <EditText
                            android:id="@+id/create_hunt_title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/create_hunt_title_hint" />

                        <EditText
                            android:id="@+id/create_hunt_description"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/hunt_finish_review_text_view_min_height"
                            android:hint="@string/create_hunt_description_hint" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/create_hunt_add_points_title" />

                            <TextView
                                android:id="@+id/create_hunt_add_points_description_text"
                                style="@style/hunt_details"
                                android:text="@string/create_hunt_add_points_description" />

                        </LinearLayout>

                        <View style="@style/bottom_card_button_separator" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hunt_create_points_button"
                            android:onClick="openHintCreation"
                            android:text="@string/create_hunt_create_points" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
