<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geofind.geofind.CreateHintActivity">

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--Linear layout to wrap into scroll view-->
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/create_hint_point_info">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/create_hint_title" />

                            <TextView
                                style="@style/hunt_details"
                                android:text="@string/create_hint_details" />

                        </LinearLayout>

                        <View style="@style/bottom_card_button_separator" />

                        <Button
                            style="@style/bottom_card_button_start"
                            android:onClick="dismissPointInfo"
                            android:drawableLeft="@drawable/ic_done_grey600_24dp"
                            android:text="@string/info_card_dismiss" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/create_hint_pick_point_title" />

                            <TextView
                                style="@style/hunt_details"
                                android:text="@string/create_hint_pick_point_description" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/hunt_details_map_height">

                            <ImageView
                                android:id="@+id/create_hint_map"
                                android:layout_width="fill_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:onClick="openPointPicker"
                                android:visibility="invisible" />

                            <ProgressBar
                                android:id="@+id/progress_bar"
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true" />

                        </RelativeLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        style="@style/item_list_hunt_inner_layout"
                        android:orientation="vertical">

                        <TextView
                            style="@style/hunt_details_title"
                            android:text="Hint Details" />

                        <EditText
                            android:id="@+id/create_hint_description"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/hunt_finish_review_text_view_min_height"
                            android:hint="@string/create_hint_hint_text_hint" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/item_hint_picture" />

                            <TextView
                                style="@style/hunt_details"
                                android:text="@string/create_hint_select_picture_details" />

                        </LinearLayout>

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/create_hint_image"
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/hunt_details_map_height"
                            android:scaleType="centerCrop" />

                        <View style="@style/bottom_card_button_separator" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hint_select_picture"
                            android:text="@string/create_hint_select_picture"
                            android:onClick="openImageSelection"
                            android:drawableLeft="@drawable/ic_image_grey600_24dp" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hint_remove_picture"
                            android:visibility="gone"
                            android:text="@string/create_hint_remove_image"
                            android:onClick="removeSelectedImage"
                            android:drawableLeft="@drawable/ic_clear_grey600_24dp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/item_hint_video" />

                            <TextView
                                style="@style/hunt_details"
                                android:text="@string/create_hint_select_video_details" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:id="@+id/create_hint_play_video_layout"
                            android:visibility="gone">

                            <View style="@style/bottom_card_button_separator" />

                            <Button
                                style="@style/bottom_card_button"
                                android:id="@+id/create_hint_play_video"
                                android:text="@string/create_hint_play_video"
                                android:drawableLeft="@drawable/ic_play_arrow_grey600_24dp" />
                        </LinearLayout>

                        <View style="@style/bottom_card_button_separator" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hint_select_video"
                            android:text="@string/create_hint_select_video"
                            android:onClick="openVideoSelection"
                            android:drawableLeft="@drawable/ic_movie_grey600_24dp" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hint_remove_video"
                            android:visibility="gone"
                            android:text="@string/create_hint_remove_video"
                            android:onClick="removeSelectedVideo"
                            android:drawableLeft="@drawable/ic_clear_grey600_24dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                style="@style/card_view"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/card_view"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/item_list_hunt_inner_layout"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/hunt_details_title"
                                android:text="@string/item_hint_sound" />

                            <TextView
                                style="@style/hunt_details"
                                android:text="@string/create_hint_select_audio_details" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:id="@+id/create_hint_play_audio_layout"
                            android:visibility="gone">

                            <View style="@style/bottom_card_button_separator" />

                            <Button
                                style="@style/bottom_card_button"
                                android:id="@+id/create_hint_play_audio"
                                android:text="@string/create_hint_play_audio"
                                android:drawableLeft="@drawable/ic_play_arrow_grey600_24dp" />
                        </LinearLayout>

                        <View style="@style/bottom_card_button_separator" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hint_select_audio"
                            android:text="@string/create_hint_select_audio"
                            android:onClick="openAudioSelection"
                            android:drawableLeft="@drawable/ic_audiotrack_grey600_24dp" />

                        <Button
                            style="@style/bottom_card_button"
                            android:id="@+id/create_hint_remove_audio"
                            android:visibility="gone"
                            android:text="@string/create_hint_remove_audio"
                            android:onClick="removeSelectedAudio"
                            android:drawableLeft="@drawable/ic_clear_grey600_24dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
